--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
   "bugs": {
     "url": "https://github.com/findme-react/couchdb-api/issues"
   },
-  "homepage": "https://github.com/findme-react/couchdb-api#readme"
+  "homepage": "https://github.com/findme-react/couchdb-api#readme",
+  "devDependencies": {
+    "babel-cli": "6.9.0",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.9.0",
+    "file-loader": "0.8.5",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1"
+  }
 }
