Add npm script to create the distribution

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CouchDB based API for find.me.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": "webpack"
   },
   "repository": {
     "type": "git",
