--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "webpack"
+    "dist": "webpack",
+    "lint": "eslint src || true"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "babel-cli": "6.9.0",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.9.0",
+    "eslint": "2.11.1",
     "file-loader": "0.8.5",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
