--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "file-loader": "0.8.5",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
+  },
+  "dependencies": {
+    "q": "1.4.1"
   }
 }
