--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "startDev": "webpack-dev-server --watch --inline --hot",
     "dist": "webpack",
     "lint": "eslint src || true"
   },
